# ansible-role-boilerplate

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
defaults/: main.yml
handlers/: main.yml
molecule/default/: converge.yml  molecule.yml
tasks/: main.yml
tests/: test.yml
vars/: main.yml
