[tool.poetry]
name = "ansible-role-boilerplate"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^4.2.0"
molecule = {extras = ["docker", "lint"], version = "^3.3.4"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
